--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
     environment:
       - MONGO_URI=mongodb://mongo:27017/fruits
       - PORT=3000
-      - NODE_ENV=production
+      - NODE_ENV=development
     depends_on:
       - mongo
     volumes:
-      - ./.vscode:/api/.vscode
+      - .vscode:/api/.vscode
     ports: ["3000:3000"]
 
   mongo:
     image: mongo
+    volumes:
+      - "./db:/data/db"
